# gce-ai-casa-companion

./: .gitignore  AGENTS.md  README.legacy.md  README.md  SECURITY.md  VOICE_AGENT_UNIFICATION_PROPOSAL.md  casa_companion_full_audit.md  merge_media_to_webrevamp.py
.github/workflows/: backend-deploy.yml  fly-deploy.yml  vercel-env-guard.yml
ARCHIVE/desktop-voice-proto-nextjs/: package.json
ARCHIVE/tv-companion/: AGENTS.md  ask_azure_gpt4o.py  decompose_corvo.py  hunyuan_corvo.py  render.yaml  segment_corvo.py  trellis_corvo.py  video_gen_corvo.py  video_gen_corvo_library.py  video_gen_provider.py
ARCHIVE/voice/agent/casa-voice-v2/: pyproject.toml
ARCHIVE/voice/agent/casa-voice-v2/client/: manifest.json
ARCHIVE/voice/agent/casa-voice-v2/esp32/: main.c  wifi.h
ARCHIVE/voice/v1/kid-voice-companion/backend/: pyproject.toml
ARCHIVE/voice/v1/kid-voice-companion/backend/src/: config.py
ARCHIVE/voice/v1/kid-voice-companion/backend/tests/: test_pipeline.py
apps/desktop/: .env.example  tailwind.config.ts  test-mp3.mjs  test-wav.js
apps/landing/: .env.example  README.md  tailwind.config.ts  tsconfig.json
apps/mobile/: .env.example  README.md  tsconfig.app.json  vercel.json  vite.config.ts
casa-voice/: README.md  fly.toml  pyproject.toml
casa-voice-v2/: BUILD_PLAN.md
casa-voice-v2/esp32/: websocket.c
casa-voice/casa-pipecat-voice-agent/: run.ps1
casa-voice/casa-pipecat-voice-agent/backend/: README.md  pyproject.toml
casa-voice/casa-pipecat-voice-agent/backend/src/: config.py  pipeline.py
casa-voice/casa-pipecat-voice-agent/backend/src/static/: index.html
casa-voice/client/: app.js  index.html  manifest.json
casa-voice/kid-voice-companion/: README.md  docker-compose.yml
casa-voice/kid-voice-companion/backend/src/: pipeline.py  serializer.py
casa-voice/kid-voice-companion/backend/static/: test_client.html
casa-voice/solution-b/: main.py
casa-voice/src/casa_voice/: providers.py  sessions.py
casa_voice_V3_dual/: BACKLOG.md  REVIEW_REPORT.md  main.py  pyproject.toml  start-casa-tunnel.ps1
casa_voice_V3_dual/client/: app.js  audio-device.html  audio-device.js  index.html
casa_voice_V3_dual/esp32/main/: main.c  websocket.h
casa_voice_V3_dual/scripts/: Install Casa Voice.bat  setup-casa.ps1  start-casa.ps1
casa_voice_V3_dual/src/casa_voice/: persistence.py
casa_voice_V3_dual/tests/: integration_test.py  native_audio_test.py  wake_phrase_e2e_test.py
docs/: VOICE_AGENT_V2_ARCHITECTURE.md  casa-companion-soul.md  casa-sync-audit-2026-06-30.md  character-asset-inventory-with-dates.md
docs/prompts/: kimi-frontend-layout-bridge.md
frontend/: next.config.mjs  package-lock.json  test-mp3.js
frontend/app/: layout.tsx
frontend/components/: AudioWave.tsx  CostPanel.tsx  Transcript.tsx
frontend/lib/: assign_voices.py
frontend/scripts/: copy-vad-assets.js
pipelines/3d-character-gen/: BLUEPRINT.md  SWARM_TASK.md  character_prompts_v2.json  generate_v2_prompts.py  make_body_trunk.py  requirements.txt  run_batch.py  run_phase3.bat  run_phase3.py  run_phase3.sh  segment_corvo.py  video_gen_character.py  video_gen_corvo.py  video_gen_corvo_library.py  video_gen_provider.py  video_gen_stellino.py  video_gen_tartaruga.py
pipelines/hero-video/: PHASE3_BATCH_GENERATION.md  README.md  (+15 more)
scripts/: character-asset-audit.mjs  sync-env-local.py
tv-companion/: .gitignore  BLUEPRINT.md  decompose_corvo.py  hunyuan_corvo.py  inspect_layers.py  make_corvo_transparent.py  server.py  survey_responses.csv  trellis_corvo.py  video_gen_stellino.py
voice-agent/: README.md
web-mobile/: .gitignore  README.md  railway.json
web-next/: .env.example  next.config.mjs  package-lock.json  package.json  page.html
web-revamp/: .env.example  casa-companion-character-mic-buttons.html  character-asset-catalog.md  character-sync-report.json  character-test-results.md  fly.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
(+417 files in other folders)
