[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casa-voice"
version = "2.0.0"
description = "Unified voice agent for Casa Companion — OpenRouter-only, barge-in, voice commands, PWA + ESP32"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Casa Companion Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "supabase>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "scipy>=1.13.0",
    "soxr>=0.3.0",           # Optional: faster resample than scipy
    "loguru>=0.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
all = ["casa-voice[soxr]"]

[tool.setuptools.packages.find]
where = ["src"]
