[project]
name = "kid-voice-agent"
version = "0.1.0"
description = "Voice-first AI companion backend using FastAPI and Pipecat"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "pipecat-ai[openai,deepgram,elevenlabs,silero,websocket]>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
